<resources>
    <string name="app_name">Ganko Bovinos</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">Olvidé la Contraseña</string>
    <string name="farms">Fincas</string>
    <string name="location">Ubicación</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="add_finca">Agregar Finca</string>
    <string name="farm_location">Ubicación de la Finca</string>
    <string name="hectares">Hectáreas</string>
    <string name="number_of_hectares">Número de Hectáreas</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_add">Agregar</string>
    <string name="btn_Acept">Aceptar</string>
    <string name="delete_farm">Eliminar Finca</string>
    <string name="delete_farm_text">Digita tu Contraseña para eliminar la finca</string>
    <string name="farm_name">Nombre de la Finca</string>
    <string name="change_farm">Cambiar Finca</string>
    <string name="bovines">BOVINOS</string>
    <string name="milk">PRODUCCION DE LECHE</string>
    <string name="reproductive_uppercase">REPRODUCTIVO</string>
    <string name="meat_uppercase">CEBA</string>
    <string name="feeding">ALIMENTACIÓN</string>
    <string name="management">MANEJO</string>
    <string name="movement">MOVIMIENTO</string>
    <string name="vaccines">VACUNAS</string>
    <string name="health">SANIDAD</string>
    <string name="straw">PAJILLAS</string>
    <string name="prairies">PRADERAS</string>
    <string name="reports">REPORTES</string>
    <string name="averages">PROMEDIOS</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="menu_groups">GRUPOS</string>
    <string name="notifications">NOTIFICACIONES</string>
    <string name="vaccine">Vacuna</string>
    <string name="bovine_name">Nombre del Bovino</string>
    <string name="sex">Sexo</string>
    <string name="birthday">Fecha de Nacimiento</string>
    <string name="breed">Raza</string>
    <string name="purpose">Propósito</string>
    <string name="filter">Filtro</string>
    <string name="meat">ceba</string>
    <string name="both">Ambos</string>
    <string name="in_production">En Producción</string>
    <string name="in_meat">En Ceba</string>
    <string name="in_service">En Servicio</string>
    <string name="in_diagnosis">En Diagnostico</string>
    <string name="weaning">Destete</string>
    <string name="show_retired">Ver Retirados</string>
    <string name="clean_filters">Limpiar Filtros</string>
    <string name="remove">Retiro</string>
    <string name="remove_bovine">Retirar Bovino</string>
    <string name="remove_bovine_text">¿Desea Retirar el Bovino?</string>
    <string name="male">Macho</string>
    <string name="female">Hembra</string>
    <string name="reason">Motivo</string>
    <string name="remove_date">Fecha de Retiro</string>
    <string name="btn_next">Siguiente</string>
    <string name="add_bovine">Agregar Bovino</string>
    <string name="number">Numero</string>
    <string name="number_of_identification">Número de Identificación</string>
    <string name="name">Nombre</string>
    <string name="name_placeholder">Nombre del Bovino</string>
    <string name="bovine_breed">Raza del Bovino</string>
    <string name="number_of_births">Número de Partos</string>
    <string name="previous_number_of_births">Número de Partos Previos</string>
    <string name="weight">Peso</string>
    <string name="weight_in_kg">Peso en Kilogramos</string>
    <string name="kilogram">Kg</string>
    <string name="color">Color</string>
    <string name="bovine_color">Color del Bovino</string>
    <string name="weaned">Destetado</string>
    <string name="weaned_date">Fecha de Destete</string>
    <string name="btn_back">Atrás</string>
    <string name="father_id">ID Padre</string>
    <string name="mother_id">ID Madre</string>
    <string name="father_id_text">Identificación del Padre</string>
    <string name="mother_id_text">Identificación de la Madre</string>
    <string name="btn_add_photo">Agregar Foto</string>
    <string name="reproductive">Reproductivo</string>
    <string-array name="milk_production">
        <item>Litros vendidos</item>
        <item>Litros perdidos</item>
        <item>Litros regalados</item>
        <item>Consumo propio</item>
    </string-array>
    <string name="liters">Lts</string>
    <string name="total_kg">Total Kilogramos</string>
    <string name="morning">Mañana</string>
    <string name="afternoon">Tarde</string>
    <string name="add_milk_production">Agregar Producción de Leche</string>
    <string name="date">Fecha</string>
    <string name="production">Producción</string>
    <string name="liters_text">Litros</string>
    <string name="time">Jornada</string>
    <string name="zeal">Celo</string>
    <string name="service">Servicio</string>
    <string name="next_estimated_zeal">Próximo Celo Estimado</string>
    <string name="historical">Historico</string>
    <string name="add_zeal">Agregar Celo</string>
    <string name="possible_zeal_date">Fecha Posible Celo</string>
    <string name="zeal_date">Fecha de Celo</string>
    <string name="riding_date">fecha de Monta</string>
    <string name="palpation_date">Fecha de Palpación</string>
    <string name="weight_gain">Ganancia de Peso</string>
    <string name="kg">Kg</string>
    <string name="add_weight_gain">Agregar Ganancia de Peso</string>
    <string name="measure_date">Fecha de Medición</string>
    <string name="food_name">Nombre del Alimento</string>
    <string name="price_per_kilo">Precio por Kilo</string>
    <string name="total_price">Valor Total</string>
    <string name="event_name">Nombre del Evento</string>
    <string name="treatment">Tratamiento</string>
    <string name="frecuency">Frecuencia</string>
    <string name="Observations">Observaciones</string>
    <string name="product">Producto</string>
    <string name="product_price">Precio del Producto</string>
    <string name="next_application">Siguiente Aplicación</string>
    <string name="vaccine_name">Nombre de la Vacuna</string>
    <string name="quantity">Cantidad</string>
    <string name="price">Valor</string>
    <string name="dicease_name">Nombre de la Enfermedad</string>
    <string name="dosis">Dosis</string>
    <string name="atention_prince">Valor de la Atención</string>
    <string name="milk_sell">Venta de Leche</string>
    <string name="liters_sold">Litros Vendidos</string>
    <string name="price_per_liter">Precio por Litro</string>
    <string name="total">Total</string>
    <string name="add_operation">Agregar Operación</string>
    <string name="price_in_pesos">Valor en Pesos</string>
    <string name="number_of_litters">Numero de Litros</string>
    <string name="group">Grupo</string>
    <string name="select_all">Seleccionar Todo</string>
    <string name="selected">Seleccionados</string>
    <string name="groups">Grupos</string>
    <string name="bovine_selected">Bovinos Seleccionados</string>
    <string name="ration">Ración</string>
    <string-array name="origin">
        <item>Nacimiento</item>
        <item>Compra</item>
    </string-array>
    <string name="bull">Toro</string>
    <string name="id">ID</string>
    <string name="basket">Canastilla</string>
    <string name="number_of_baskets">Numero de Canastilla</string>
    <string name="type">Tipo</string>
    <string name="bull_name">Nombre del Toro</string>
    <string name="origin_name">Nombre de la procedencia</string>
    <string name="date_value">dd / mm / yyyy</string>
    <string name="button_plus">+</string>
    <string name="menu_open">Menú abierto</string>
    <string name="menu_close">Menú cerrado</string>
    <string name="operation_type">Tipo de Operación</string>
    <string name="filter_milk">Leche</string>
    <string name="filter_meat">Ceba</string>
    <string name="filter_both">Ambos</string>
    <string name="filter_purpose">Propósito</string>
    <string name="filter_production">En producción</string>
    <string name="filter_reproductive">Reproductivo</string>
    <string name="filter_state_zeal">En celo</string>
    <string name="filter_service">En servicio</string>
    <string name="filter_diagnosis">En diagnóstico</string>
    <string name="filter_weaning">Destete</string>
    <string name="filter_retired">Retirados</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed_name">Nombre del alimento</string>
    <string name="feed_date">Fecha del alimento</string>
    <string name="feed_kile_value">Valor por kilo</string>
    <string name="feed_total_value">Valor Total</string>
    <string name="last_feed">Ultima Alimentación</string>
    <string name="monthly_feed">Valor de alimentación mensual</string>
    <string name="monthlyFeed">27000 COP</string>
    <string name="feedNumberBovine">1</string>
    <string name="manage_treatment">Tratamiento</string>
    <string name="manage_product">Producto</string>
    <string name="manage_event_name">Nombre del evento</string>
    <string name="markBovine">ABC123</string>
    <string name="dairy">Lechería</string>
    <string name="health_treatment">Tratamiento</string>
    <string name="health_product">Producto</string>
    <string name="health_dose">Dosis</string>
    <string name="health_frequency">Frecuencia</string>
    <string name="health_atention_value">Valor atención</string>
    <string name="health_product_value">Valor producto</string>
    <string name="health_next_application">Siguiente aplicación</string>
    <string name="total_milk">Total</string>
    <string name="average_milk">Promedio</string>
    <string name="empty_fields">No Debe Haber Campos Vacíos</string>
    <string name="food_type">Tipo de alimento</string>
    <string name="feed_kg_value">Valor por kilogramo</string>
    <string name="finalize">Finalizar</string>
    <string name="save">Guardar</string>
    <string name="empty_list">No se encontraron registros</string>
    <string name="race">Raza</string>
    <string name="straw_id">Id de pajilla</string>
    <string name="layette">Canastilla</string>
    <string name="layette_number">Número de canastilla</string>
    <string name="value">Valor</string>
    <string name="money_value">Valor en pesos</string>
    <string name="are_you_sure_you_want_to_delete_the_bovine">¿Está seguro que desea eliminar el Bovino?</string>
    <string name="delete_bovine">Eliminar Bovino</string>
    <string name="bovine_deleted">Bovino eliminado</string>
    <string name="the_bovine_has_been_retired">El bovino ha sido retirado</string>
    <string name="add_straw">Agregar Pajilla</string>
    <string-array name="straw_type">
        <item>Leche</item>
        <item>Ceba</item>
        <item>Doble Propósito</item>
    </string-array>
    <string name="straw_value">Valor</string>
    <string name="straw_breed">Raza</string>
    <string name="monta_natural">Monta Natural</string>
    <string name="inseminaci_n_artificial">Inseminación Artificial</string>
    <string name="onService">En Servicio</string>
    <string name="services">Servicios</string>
    <string name="meadow_size_text">Tamaño de la pradera</string>
    <string name="graminea_type">Tipo de Gramínea</string>
    <string name="manteinance">Mantenimiento</string>
    <string name="event_type">Tipo de evento</string>
    <string name="id_group">ID Grupo</string>
    <string name="other_which">¿Otro?¿Cuál?</string>
    <string name="write_the_other_event_type">Escriba el otro tipo de evento</string>
    <string name="event_date">Fecha del evento</string>
    <string name="treatment_or_strategy">Tratamiento o estrategia</string>
    <string name="treatment_or_strategy_applied">Tratamiento o estrategia aplicado</string>
    <string name="product_applied">Producto aplicado</string>
    <string name="frecuency_in_days">Frecuencia en días</string>
    <string name="write_your_observations">Escriba sus observaciones</string>
</resources>